--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -4,13 +4,12 @@
 
 /* Footer style */
 footer {
-    background-color: #00ff00;
+    background-color: white;
     height: 60px;
     width: 100%;
+    bottom: 0;
     justify-content: center;
     align-items: center;
     position: absolute;
     display: flex;
-    bottom: 0;
-    border-top: 1px solid #cccccc;
 }
