--- a/web_static/styles/3-common.css
+++ b/web_static/styles/3-common.css
@@ -1,12 +1,9 @@
 /*
-* === Common style ===
-*/
+ * === Global style ===
+ */
 
 /* Body style */
 body {
-    margin: 0;
-    padding: 0;
-    font: #484848;
-    font-size: 14px;
-    font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    color: #484848;
+    font: 14px Circular, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
