--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -1,14 +1,11 @@
 /*
-* === Common style ===
-*/
+ * === Global style ===
+ */
 
 /* Body style */
 body {
-    margin: 0;
-    padding: 0;
-    font: #484848;
-    font-size: 14px;
-    font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    color: #484848;
+    font: 14px Circular, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 /* Container style */
@@ -16,7 +13,8 @@ body {
     margin: 30px auto;
     max-width: 1000px;
 }
-/* strong style */
+
+/* Strong style */
 strong {
     font-weight: bold;
 }
