--- a/web_static/styles/2-header.css
+++ b/web_static/styles/2-header.css
@@ -1,10 +1,10 @@
 /*
-* === Header style ===
-*/
+ * === Header style ===
+ */
 
 /* Header style */
-header{
-    background-color: #ff0000;
+header {
+    background-color: #f00;
     height: 70px;
     width: 100%;
 }
