--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -1,11 +1,11 @@
 /*
-* === Header style ===
-*/
+ * === Header style ===
+ */
 
 /* Header style */
 header {
-    background: white url('../images/logo.png') 20px center no-repeat;
+    background: #fff url('../images/logo.png') 20px center no-repeat;
+    border-bottom: 1px solid #ccc;
     height: 70px;
     width: 100%;
-    border-bottom: 1px solid #cccccc;
 }
