--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,16 +1,16 @@
 /*
-* === Header style ===
-*/
+ * === Footer style ===
+ */
 
 /* Footer style */
 footer {
-    background-color: white;
-    height: 60px;
-    width: 100%;
-    bottom: 0;
-    justify-content: center;
     align-items: center;
-    position: absolute;
+    background-color: #fff;
+    border-top: 1px solid #ccc;
+    bottom: 0;
     display: flex;
-    border-top: 1px solid #cccccc;
+    height: 60px;
+    justify-content: center;
+    position: absolute;
+    width: 100%;
 }
