--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -2,29 +2,29 @@
  * === Filters class style ===
  */
 
- /* Filters style */
- section.filters {
-    background-color: #ffffff;
+/* Filters style */
+.filters {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 4px;
     height: 70px;
     width: 100%;
-    border: 1px solid #dddddd;
-    border-radius: 4px;
- }
-
-/* search style */
-section.filters button {
-    background: #ff5a5f;
-    font-size: 18px;
-    color: #ffffff;
-    height: 48px;
-    border: none;
-    border-radius: 4px;
-    float: right;
-    width: 20%;
-    margin: 12px 30px;
 }
 
-/* search button hover opacity */
-section.filters button:hover {
+/* Search button style */
+.filters button {
+    background: #ff5a5f;
+    border: none;
+    border-radius: 4px;
+    color: #fff;
+    float: right;
+    font-size: 18px;
+    height: 48px;
+    margin: 12px 30px;
+    width: 20%;
+}
+
+/* Search button hover opacity */
+.filters button:hover {
     background-color: rgba(255, 90, 95, .9);
 }
