--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,43 +1,72 @@
 /*
  * === Filters class style ===
  */
- /* Filters style */
- section.filters {
-    background-color: #ffffff;
-    height: 70px;
-    width: 100%;
-    border: 1px solid #dddddd;
-    border-radius: 4px;
- }
 
-/* search style */
-section.filters button {
-    background: #ff5a5f;
-    font-size: 18px;
-    color: #ffffff;
-    height: 48px;
-    border: none;
-    border-radius: 4px;
-    float: right;
-    width: 20%;
-    margin: 12px 30px;
+/* Filters style */
+.filters {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  height: 70px;
+  width: 100%;
 }
 
-/* search button hover opacity */
-section.filters button:hover {
-    opacity: 90%;
+/* Search button style */
+.filters button {
+  background: #ff5a5f;
+  border: none;
+  border-radius: 4px;
+  color: #fff;
+  float: right;
+  font-size: 18px;
+  height: 48px;
+  margin: 12px 30px;
+  width: 20%;
 }
 
-div.locations h3, div.amenities h3 {
-    font-weight: 600;
-    margin-bottom: 0px;
+/* Search button hover opacity */
+.filters button:hover {
+  background-color: rgba(255, 90, 95, .9);
 }
 
-div.locations h4, div.amenities h4 {
-    font-weight: 400;
-    font-size: 14px;
-    margin: 4px auto;
-    display: inline-block;
-    height: 100%;
-    width: 25%;
+/* Locations and amenities style */
+.locations,
+.amenities {
+  display: inline-block;
+  height: 100%;
+  width: 25%;
+}
+
+/* Locations border */
+.locations {
+  border-right: 1px solid #ddd;
+}
+
+/*
+ * --- Places header style ---
+ */
+
+/* Header box sizing */
+.filters h2,
+.filters h3,
+.filters h4 {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+/* Header 3 style */
+.filters h3 {
+  font-size: 1.17em;
+  font-weight: 600;
+  height: 50%;
+  padding: 15.5px 0 0 30px;
+}
+
+/* Header 4 style */
+.filters h4 {
+  font-size: 14px;
+  font-weight: 400;
+  height: 50%;
+  padding: 4.5px 0 12px 30px;
 }
