--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -7,7 +7,7 @@
 }
 
 .filters button {
-    background: #ff5a5f;
+    background-color: #ff5a5f;
     border: none;
     border-radius: 4px;
     color: #fff;
