--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -12,6 +12,7 @@
     width: 100%;
     font-weight: bold;
     margin: .67em 0 .67em 0;
+    padding-left: 22px;
 }
 .places h2 {
     font-size: 30px;
